Updating with local Elements repo
This is only temporary location need to be given AWS repo once elements pushed to AWS

--- a/com.vht.openvxml/releng/com.vht.openvxml.configuration/pom.xml
+++ b/com.vht.openvxml/releng/com.vht.openvxml.configuration/pom.xml
@@ -26,7 +26,7 @@
 		</repository>
 		<repository>
 			<id>buildVHT-elements</id>
-			<url>file:///E:/EclWorkspace/Upgrade/BuildVHT/com.buildvht.elements/releng/com.buildvht.elements.update/target/repository</url>
+			<url>file:///E:/Git/Elements/com.vht.elements/releng/com.vht.elements.update/target/repository</url>
 			<layout>p2</layout>
 		</repository>
 		<repository>
