--- a/releng/com.vht.openvxml.configuration/pom.xml
+++ b/releng/com.vht.openvxml.configuration/pom.xml
@@ -19,7 +19,21 @@
 			<url>${eclipse-repo.url}</url>
 			<layout>p2</layout>
 		</repository>
-
+		<repository>
+			<id>orbit-2019-03</id>
+			<url>https://download.eclipse.org/tools/orbit/downloads/drops/R20190226160451/repository/</url>
+			<layout>p2</layout>
+		</repository>
+		<repository>
+			<id>build-vht</id>
+			<url>file:///C:/OpenVXML</url>
+			<layout>p2</layout>
+		</repository>
+		<repository>
+			<id>nebula-latest-release</id>
+			<url>https://download.eclipse.org/nebula/releases/latest/</url>
+			<layout>p2</layout>
+		</repository>
 	</repositories>
 
 	<build>
