--- a/plugins/org.eclipse.vtp.framework.engine/.classpath
+++ b/plugins/org.eclipse.vtp.framework.engine/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="lib" path="commons-fileupload-1.3.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
