--- a/plugins/com.openmethods.openvxml.desktop.model.workflow/.classpath
+++ b/plugins/com.openmethods.openvxml.desktop.model.workflow/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
+	<classpathentry kind="lib" path="derby-10.15.1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
