--- a/plugins/com.openmethods.openvxml.desktop.model.workflow/build.properties
+++ b/plugins/com.openmethods.openvxml.desktop.model.workflow/build.properties
@@ -3,4 +3,5 @@ source.. = src/,\
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               derby-10.15.1.3.jar
