--- a/plugins/org.eclipse.vtp.framework.engine/build.properties
+++ b/plugins/org.eclipse.vtp.framework.engine/build.properties
@@ -1,4 +1,5 @@
-source.. = src/main/java/
+source.. = src/main/java/,\
+           src/test/java/
 output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
@@ -6,4 +7,5 @@ bin.includes = META-INF/,\
                schema/,\
                httpclient-4.2.5.jar,\
                httpcore-4.3.jar,\
-               httpmime-4.2.5.jar
+               httpmime-4.2.5.jar,\
+               commons-fileupload-1.3.3.jar
