--- a/desktop/plugins/com.openmethods.openvxml.desktop.model.workflow/.classpath
+++ b/desktop/plugins/com.openmethods.openvxml.desktop.model.workflow/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry exported="true" kind="lib" path="derby-10.14.2.0.jar"/>
+	<classpathentry kind="lib" path="derbyclient-10.14.2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
