--- a/desktop/plugins/com.openmethods.openvxml.desktop.model.workflow/build.properties
+++ b/desktop/plugins/com.openmethods.openvxml.desktop.model.workflow/build.properties
@@ -4,4 +4,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               derby-10.14.2.0.jar
+               derby-10.14.2.0.jar,\
+               derbyclient-10.14.2.0.jar
