--- a/elements/plugins/javax.xml-api_2.3.1/.project
+++ b/elements/plugins/javax.xml-api_2.3.1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>javax.xml-api_2.3.1</name>
+	<name>Javab_javax.xml-api</name>
 	<comment></comment>
 	<projects>
 	</projects>
